# mkShapesRDF

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yml  Dockerfile  MANIFEST.in  README.md  checkErrs.py  environment.yml  install.sh  mkShapesRDF.py  mkShapesRDFParallel.py  mkdocs.yml  pyproject.toml  runner.py  setup.cfg  setup.sh  start.sh
.github/workflows/: ci_lint_format_test.yml
2016/: aliases.py  configuration.py  cuts.py  nuisances.py  samples.py  variables.py
2016Real/: aliases.py  configuration.py  cuts.py  samples.py
2016Renorm/: aliases.py  configuration.py  cuts.py  nuisances.py  plot.py  samples.py  samplesDY.py  variables.py
docs/: conf.py  config.md  folder.md  getting_started.rst  index.md  index.rst  runner.md
docs/development/: index.rst
docs/lib/: index.rst  parse_cpp.rst  search_files.rst  utils.rst
docs/processor/: index.rst  mRDF.rst  module.rst  processor.rst  scripts.rst
docs/processor/configuration/: data.rst  index.rst  productions.rst  steps.rst
docs/processor/modules/: index.rst  jme_calculator.rst  snapshot.rst
docs/shapes/: configuration.rst  datacardfactory.rst  index.rst  plotfactory.rst  runner.rst
docs/shapes/python/: configuration.py  jdl_dict.py  nuisances.py  samples.py  variables.py
docs/shapes/scripts/: index.rst  mkDatacards.rst  mkPlot.rst  mkShapesRDF.rst
docs/shapes/utils/: histo_utils.rst  index.rst  latinos_utils.rst  rnp.rst
docs/tests/: index.rst  test_parse_cpp.rst  test_processor.rst  test_shapes.rst
examples/2016Real/: aliases.py  configuration.py  cuts.py  errs.txt  meanTime.py  ngenjet.cc  nuisances.py  plot.py  samples.py  script.py  structure.py  variables.py
examples/FatJet_test/: configuration.py  samples.py  variables.py
examples/Full2018_v9/: aliases.py  configuration.py  cuts.py  nuisances.py  plot.py  samples.py  variables.py
examples/test_folder/: aliases.py  configuration.py  nuisances.py  plot.py  samples.py  variables.py
examples/test_postprocessing/: aliases.py  configuration.py  cuts.py  nuisances.py  plot.py  samples.py  variables.py
jsonpog-integration/: .gitlab-ci.yml  .sync-commit
mkShapesRDF/lib/: SearchFiles.py  check_condor_status.py  parseCpp.py  parse_cpp.py  search_files.py  utils.py
mkShapesRDF/processor/: downloader.py  processor.py
mkShapesRDF/processor/data/: LeptonSel_cfg.py  dataset.json  input_dataset.json
mkShapesRDF/processor/framework/: Module.py  Productions_cfg.py  Steps_cfg.py  checkErrors.py  downloader.py  mRDF.py  module.py  processor.py
mkShapesRDF/processor/framework/samples/: Run2018_UL2018_nAODv9.py  Run2023_Prompt_nAODv12.py  Summer20UL18_106x_nAODv9.py  Summer23BPix_130x_nAODv12.py  samplesCrossSections_13p6TeV.py  samplesCrossSections_UL.py
mkShapesRDF/processor/modules/: BaseW.py  DressedLeptonProducer.py  FatJMECalculatorRun3.py  FatJetSel.py  FatJetSel_vecchio.py  GenLeptonMatchProducer.py  GenVarProducer.py  HiggsGenVarsProducer.py  Histogram.py  JMECalculator.py  JMECalculatorRun3.py  JetSel.py  JetSelMask.py  LeptonMaker.py  LeptonSF.py  LeptonSel.py  LumiMask.py  PromptParticlesGenVarsProducer.py  Snapshot.py  TopGenVarsProducer.py  WGammaStarProducer.py  btagSFProducerLatinos.py  l2KinProducer.py
mkShapesRDF/processor/scripts/: examples.txt  mkPostProc.py  resubmitLocal.py
mkShapesRDF/shapeAnalysis/: BatchSubmission.py  ConfigLib.py  Plotter.py  histo_utils.py  mkDatacards.py  mkShapesRDF.py  mkShapesRDFParallel.py  rnp.py  runner.py  utils.py
mkShapesRDF/shapeAnalysis/latinos/: CMS_lumi.py  LatinosUtils.py  PlotFactory.py  mkDatacards.py  mkPlot.py  tdrStyle.py
mkShapesRDF/shapeAnalysis/libs/: SearchFiles.py
plots16/: aliases.py  configuration.py  cuts.py  samples.py  variables.py
plotsP/: aliases.py  configuration.py  cuts.py  plot.py  samples.py
tests/: test_env.sh  test_parseCpp.py  test_parse_cpp.py  test_processor.py  test_shapes.py
utils/src/: hadd.cxx
