[metadata]
name= mkShapesRDF
version= 0.0.1
author=Giorgio Pizzati
author_email=giorgio.pizzati@cern.ch
description= Lightweight framework to create shapes
url=https://github.com/giorgiopizz/mkShapesRDF/
classifiers=
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)



[options]
zip_safe = False
include_package_data = True
packages = find:

[options.package_data]
* = include/*.hh 


[options.entry_points]
console_scripts =
    mkShapesRDFParallel = mkShapesRDF.shapeAnalysis.mkShapesRDFParallel:main


[options.packages.find]
exclude =
    2016Real*
    docs*
    logs*
    site*
