[metadata]
name= mkShapesRDF
version= 0.0.1
author=Giorgio Pizzati
author_email=giorgio.pizzati@cern.ch
description= Lightweight framework to create shapes
url=https://github.com/giorgiopizz/mkShapesRDF/
classifiers=
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)



[options]
zip_safe = False
include_package_data = True
install_requires = 
    CMSJMECalculators @ git+https://gitlab.cern.ch/cp3-cms/CMSJMECalculators.git
    tabulate
    cloudpickle
	pytest
    flake8
    black
    pre-commit
packages = find:


[options.package_data]
* = include/*.hh 


[options.entry_points]
console_scripts =
    mkShapesRDF = mkShapesRDF.shapeAnalysis.mkShapesRDF:main
    mkDatacards = mkShapesRDF.shapeAnalysis.latinos.mkDatacards:main
    mkPlot = mkShapesRDF.shapeAnalysis.latinos.mkPlot:main
    mkPostProc = mkShapesRDF.processor.scripts.mkPostProc:main


[options.packages.find]
exclude =
    examples*
    docs*
    logs*
    myenv*

[flake8]
max-line-length = 88
# E203: whitespace before ':'   -> black
# E501: line too long           -> ok
# F821: undefined name variable -> when executing python code is useless
extend-ignore = E203, E501, F821
exclude = **/condor,docs,myenv,mkShapesRDF.*

